// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Search renders correctly with default props 1`] = `
<form
  className="wds-global-navigation__search-container"
  onKeyDown={[Function]}
>
  <div
    className="wds-global-navigation__search"
  >
    <SearchToggle
      onClick={[Function]}
    />
    <Dropdown
      canFlip={false}
      className="wds-global-navigation__search-dropdown"
      contentClassName="wds-global-navigation__search-suggestions"
      contentScrollable={false}
      dropdownLeftAligned={false}
      dropdownRightAligned={false}
      hasDarkShadow={false}
      hasShadow={false}
      iconName="dropdown-tiny"
      isActive={false}
      isLevel2={false}
      isNotHoverable={true}
      isStickedToParent={false}
      noChevron={true}
      onClose={null}
      onMouseEnter={null}
      toggle={
        <ForwardRef
          model={
            Object {
              "placeholder-active": Object {
                "key": "global-navigation-search-placeholder-in-wiki",
                "params": Object {
                  "sitename": Object {
                    "type": "text",
                    "value": "Wookieepedia",
                  },
                },
                "type": "translatable-text",
              },
              "placeholder-inactive": Object {
                "key": "global-navigation-search-placeholder-inactive",
                "type": "translatable-text",
              },
              "results": Object {
                "param-name": "query",
                "tracking-label": "search",
                "url": "//starwars.wikia.com/wiki/Special:Search",
              },
              "suggestions": Object {
                "param-name": "query",
                "tracking-label": "search-suggestion",
                "url": "/mocks/searchSuggestions.json?",
              },
              "type": "search",
            }
          }
          onBlur={[Function]}
          onFocus={[Function]}
          onQueryChanged={[Function]}
          onSearchActivation={[Function]}
          onSearchClear={[Function]}
          onSearchClose={[Function]}
          onSearchSubmit={[Function]}
          query=""
        />
      }
      toggleAttrs={Object {}}
      toggleClassName="wds-global-navigation__search-input-wrapper"
    />
  </div>
</form>
`;

exports[`render Search renders correctly with suggestions and query 1`] = `
<form
  className="wds-global-navigation__search-container"
  onKeyDown={[Function]}
>
  <div
    className="wds-global-navigation__search"
  >
    <SearchToggle
      onClick={[Function]}
    />
    <Dropdown
      canFlip={false}
      className="wds-global-navigation__search-dropdown"
      contentClassName="wds-global-navigation__search-suggestions"
      contentScrollable={false}
      dropdownLeftAligned={false}
      dropdownRightAligned={false}
      hasDarkShadow={false}
      hasShadow={false}
      iconName="dropdown-tiny"
      isActive={true}
      isLevel2={false}
      isNotHoverable={false}
      isStickedToParent={false}
      noChevron={true}
      onClose={null}
      onMouseEnter={null}
      toggle={
        <ForwardRef
          model={
            Object {
              "placeholder-active": Object {
                "key": "global-navigation-search-placeholder-in-wiki",
                "params": Object {
                  "sitename": Object {
                    "type": "text",
                    "value": "Wookieepedia",
                  },
                },
                "type": "translatable-text",
              },
              "placeholder-inactive": Object {
                "key": "global-navigation-search-placeholder-inactive",
                "type": "translatable-text",
              },
              "results": Object {
                "param-name": "query",
                "tracking-label": "search",
                "url": "//starwars.wikia.com/wiki/Special:Search",
              },
              "suggestions": Object {
                "param-name": "query",
                "tracking-label": "search-suggestion",
                "url": "/mocks/searchSuggestions.json?",
              },
              "type": "search",
            }
          }
          onBlur={[Function]}
          onFocus={[Function]}
          onQueryChanged={[Function]}
          onSearchActivation={[Function]}
          onSearchClear={[Function]}
          onSearchClose={[Function]}
          onSearchSubmit={[Function]}
          query="Harr"
        />
      }
      toggleAttrs={Object {}}
      toggleClassName="wds-global-navigation__search-input-wrapper"
    >
      <List
        bigItems={false}
        boldItems={false}
        className="wds-global-navigation__search-suggestions-list"
        hasEllipsis={true}
        isLinked={true}
        linesBetween={false}
      >
        <li
          className="wds-global-navigation__search__suggestion"
          key="Harry Pottah"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <a
            className="wds-global-navigation__dropdown-link"
            data-tracking-label="search-suggestion"
            href="https://starwars.fandom.com/wiki/Harry_Pottah"
          >
            <span
              className="wds-global-navigation__search-suggestion-highlight"
            >
              Harr
            </span>
            y Pottah
          </a>
        </li>
        <li
          className="wds-global-navigation__search__suggestion"
          key="Frodo"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <a
            className="wds-global-navigation__dropdown-link"
            data-tracking-label="search-suggestion"
            href="https://starwars.fandom.com/wiki/Frodo"
          >
            Frodo
          </a>
        </li>
        <li
          className="wds-global-navigation__search__suggestion"
          key="Your mom"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <a
            className="wds-global-navigation__dropdown-link"
            data-tracking-label="search-suggestion"
            href="https://starwars.fandom.com/wiki/Your_mom"
          >
            Your mom
          </a>
        </li>
      </List>
    </Dropdown>
  </div>
</form>
`;
